--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Bavel - Bali Travel Time</title>
+	<title>Wisma - Wisata Malang</title>
 	<link rel="icon" type="image/png" href="img/icon/bavel.png">
 
 	<!-- Meta Description -->
-	<meta name="description" content="Bali Travel Time">
-	<meta name="keywords" content="Travel, Bali, Tourism">
+	<meta name="description" content="Wisata Malang">
+	<meta name="keywords" content="Travel, Malang, Tourism">
 	<meta name="robots" content="index, nofollow">
-	<meta name="web_author" content="Yogi Prasertawan">
+	<meta name="web_author" content="Ziven, Micehlle, Arga Fio">
 	<meta name="language" content="Indonesian">  
 
 	<!-- Import Icon -->
@@ -31,7 +31,7 @@
         	<a href="index.html" class="navbar-title">Bali Travel Time</a>
 		</div>
 		<div class="navbar-item">
-			<a href="index.html" class="navbar-title">Bali Travel Time</a>
+			<a href="index.html" class="navbar-title">Wisata Malang</a>
 			<ul>
 		        <li><a href="destination.html">Destination</a></li>
 			    <li><a href="gallery.html">Gallery</a></li>
