--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="container">
 		<div class="navbar-bars">
 			<a href="#" class="navbar-title sidebar-toggle" style="padding: 0;"><i class="ion-navicon-round"></i></a>
-        	<a href="index.html" class="navbar-title">Bali Travel Time</a>
+        	<a href="index.html" class="navbar-title">Wisata Malang</a>
 		</div>
 		<div class="navbar-item">
 			<a href="index.html" class="navbar-title">Wisata Malang</a>
