--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<div class="section-header-title-xs">
 			<h3 class="title">GREAT ART OF BALI</h3>
 		</div>
-		<p>Telusuri Keindahan Bali Yang <br> Belum Pernah Anda Temui Sebelumnya</p>
-		<a href="" class="btn btn-round btn-orange">See Our Vacation</a>
+		<p>Telusuri Keindahan Malang Yang <br> Belum Pernah Anda Temui Sebelumnya</p>
+		<a href="" class="btn btn-round btn-red">See Our Vacation</a>
 	</div>
 </section>
 
@@ -108,7 +108,7 @@
 
 <section class="section section-about">
 	<div class="about-head slide">
-		<h3>Bali Travel Time</h3>
+		<h3>Wisata Malang</h3>
 		<p><b>Bavel</b> merupakan singkatan dari <b>Bali Travel Time</b> merupakan website yang bertujuan mengenalkan pesona keindahan Bali mulai dari Wisata dan Budaya .
 		Tidak hanya sarana untuk memperkanalkan, <b>Bavel</b> juga menyediakan berbagai layanan pemesanan tiket mulai tiket Tour dan tempat penginapan di sekitar Bali </p>
 	</div>
