--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 	</div>
 	<div class="section-header-inner">
 		<div class="section-header-title">
-			<h3 class="title">GREAT <br> ART <br>OF <br>BALI</h3>
+			<h3 class="title">GREAT <br> ART <br>OF <br>Malang</h3>
 		</div>
 		<div class="section-header-title-xs">
 			<h3 class="title">GREAT ART OF BALI</h3>
 		</div>
 		<p>Telusuri Keindahan Malang Yang <br> Belum Pernah Anda Temui Sebelumnya</p>
-		<a href="" class="btn btn-round btn-red">See Our Vacation</a>
+		<a href="" class="btn btn-round btn-orange">See Our Vacation</a>
 	</div>
 </section>
 
