--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 			<h3 class="title">GREAT <br> ART <br>OF <br>Malang</h3>
 		</div>
 		<div class="section-header-title-xs">
-			<h3 class="title">GREAT ART OF BALI</h3>
+			<h3 class="title">GREAT ART OF Malang</h3>
 		</div>
 		<p>Telusuri Keindahan Malang Yang <br> Belum Pernah Anda Temui Sebelumnya</p>
-		<a href="" class="btn btn-round btn-orange">See Our Vacation</a>
+		<a href="" class="btn btn-round btn- orange">See Our Vacation</a>
 	</div>
 </section>
 
@@ -109,7 +109,7 @@
 <section class="section section-about">
 	<div class="about-head slide">
 		<h3>Wisata Malang</h3>
-		<p><b>Bavel</b> merupakan singkatan dari <b>Bali Travel Time</b> merupakan website yang bertujuan mengenalkan pesona keindahan Bali mulai dari Wisata dan Budaya .
+		<p><b>Wisma</b> merupakan singkatan dari <b>Wisata Malang</b> merupakan website yang bertujuan mengenalkan pesona keindahan Bali mulai dari Wisata dan Budaya .
 		Tidak hanya sarana untuk memperkanalkan, <b>Bavel</b> juga menyediakan berbagai layanan pemesanan tiket mulai tiket Tour dan tempat penginapan di sekitar Bali </p>
 	</div>
 	<div class="about-body">
