--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <section class="section section-discover" id="discover">
 	<div class="section-head">
 		<div class="section-line"></div>
-		<h3 class="section-title">DISCOVERY BALI</h3>
+		<h3 class="section-title">DISCOVERY Malang</h3>
 		<p class="section-subtitle">Adalah sebuah warisan indahnya alam dan budaya yang masih terjaga di Bali yang dapat anda jelajahi</p>
 	</div>
 	<div class="section-discover-body slide">
