--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<div class="about-head slide">
 		<h3>Wisata Malang</h3>
 		<p><b>Wisma</b> merupakan singkatan dari <b>Wisata Malang</b> merupakan website yang bertujuan mengenalkan pesona keindahan Bali mulai dari Wisata dan Budaya .
-		Tidak hanya sarana untuk memperkanalkan, <b>Bavel</b> juga menyediakan berbagai layanan pemesanan tiket mulai tiket Tour dan tempat penginapan di sekitar Bali </p>
+		Tidak hanya sarana untuk memperkanalkan, <b>Wisma</b> juga menyediakan berbagai layanan pemesanan tiket mulai tiket Tour dan tempat penginapan di sekitar Bali </p>
 	</div>
 	<div class="about-body">
 		<div class="row slide">
@@ -140,7 +140,7 @@
 	<div class="overlay">
 		<div class="caption">
 			<h2>ENJOY BEUTY & friendliness OF</h2> <br>
-			<img src="img/bali-island.png" alt="Bali Island">
+			<img src="img/bali-island.png" alt="Malang City">
 		</div>
 	</div>
 	<div class="texture-handler-bottom"></div>
